@@ -107,4 +107,90 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.github.temyers</groupId>
+				<artifactId>cucumber-jvm-parallel-plugin</artifactId>
+				<version>4.2.0</version>
+				<executions>
+					<execution>
+						<id>generateRunners</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>generateRunners</goal>
+						</goals>
+						<configuration>
+							<glue>
+								<package>com.smg.stepdefs</package>
+							</glue>
+							<plugins>
+								<plugin>
+									<name>com.cucumber.listener.ExtentCucumberFormatter</name>
+									<extension>html</extension>
+								</plugin>
+							</plugins>
+							<namingPattern>{f}_Parallel{c}IT</namingPattern>
+							<customVmTemplate>
+								src/test/resources/cucumber-extents-report-runner.java.vm
+							</customVmTemplate>
+							<outputDirectory>target/generated-test-sources/features</outputDirectory>
+							<featuresDirectory>src/test/resources/features</featuresDirectory>
+							<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
+							<format>json,html</format>
+							<filterFeaturesByTags>true</filterFeaturesByTags>
+							<tags>
+								<tag>${tags}</tag>
+							</tags>
+							<namingScheme>simple</namingScheme>
+							<mainClass>cucumber.jvm.parallel.ReportMerger</mainClass>
+							<arguments>
+								<argument>target/cucumber-parallel/</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<forkCount>2</forkCount>
+					<reuseForks>false</reuseForks>
+					<includes>
+						<include>**/*IT.java</include>
+					</includes>
+					<runOrder>alphabetical</runOrder>
+					<argLine>-Duser.language=en</argLine>
+					<argLine>-Xmx512m</argLine>
+					<argLine>-XX:MaxPermSize=256m</argLine>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+					<systemPropertyVariables>
+						<!--<cucumber.options>&#45;&#45;tags @example</cucumber.options> -->
+					</systemPropertyVariables>
+				</configuration>
+				<executions>
+					<execution>
+						<id>failsafe-integration-test</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+
+		</plugins>
+	</build>
+
 </project>
